# TradingBot

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile  README.md  sonar-project.properties
include/: array.h  array_tricks.h  balance.h  chart.h  context.h  decision.h  loader.h  plugin.h  prediction.h  settings.h  trade.h  utils.h  wallet.h
plugin_dev/: plugin_ichimoku.c  plugin_rsi.c  plugin_test.c
src/: array.c  array_tricks.c  balance.c  chart.c  context.c  decision.c  input.c  loader.c  main.c  settings_utils.c  trade.c  wallet.c
tests/trade_includes/: array_macro.h  context_macro.h
